--- a/Client/lib/Rhino/css/botonera.css
+++ b/Client/lib/Rhino/css/botonera.css
@@ -47,6 +47,7 @@ div[botonera] button:not([btnAbrir]):hover:after{
 div[botonera] button:hover:before{
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22) !important;
 }
+/*---------------------------------------------------------------------------*/
 div[botonera] button[btnNuevo]{
     background-color: #4FC3F7;
     top:0px;
@@ -61,9 +62,28 @@ div[botonera] button[btnNuevo]:hover:before{
     color:white;
     background-color: inherit;
     margin-left:-25px;
-    border-radius:5px; 
+    border-radius:5px;
     padding:5px;
 }
+/*---------------------------------------------------------------------------*/
+div[botonera] button[btnSeguridad]{
+    background-color: #607D8B;
+    top:0px;
+    left:0px;
+    position: absolute;
+}
+div[botonera] button[btnSeguridad]:after{
+    content: 'security';
+}
+div[botonera] button[btnSeguridad]:hover:before{
+    content: 'Seguridad';
+    color:white;
+    background-color: inherit;
+    margin-left:-25px;
+    border-radius:5px;
+    padding:5px;
+}
+/*---------------------------------------------------------------------------*/
 div[botonera] button[btnBuscar]{
     background-color: #03A9F4;
     top:0px;
@@ -78,9 +98,10 @@ div[botonera] button[btnBuscar]:hover:before{
     color:white;
     background-color: inherit;
     margin-left:-25px;
-    border-radius:5px; 
+    border-radius:5px;
     padding:5px;
 }
+/*---------------------------------------------------------------------------*/
 div[botonera] button[btnModificar]{
     background-color: #4CAF50;
     top:0px;
@@ -95,9 +116,10 @@ div[botonera] button[btnModificar]:hover:before{
     color:white;
     background-color: inherit;
     margin-left:-25px;
-    border-radius:5px; 
+    border-radius:5px;
     padding:5px;
 }
+/*---------------------------------------------------------------------------*/
 div[botonera] button[btnEliminar]{
     background-color:#e57373;
     top:0px;
@@ -112,9 +134,10 @@ div[botonera] button[btnEliminar]:hover:before{
     color:white;
     background-color: #e57373;
     margin-left:-25px;
-    border-radius:5px; 
+    border-radius:5px;
     padding:5px;
 }
+/*---------------------------------------------------------------------------*/
 div[botonera] button[btnDetalle]{
     background-color: #FF5722;
     top:0px;
@@ -129,11 +152,12 @@ div[botonera] button[btnDetalle]:hover:before{
     color:white;
     background-color: #FF5722;
     margin-left:-25px;
-    border-radius:5px; 
+    border-radius:5px;
     padding:5px;
 }
+/*---------------------------------------------------------------------------*/
 div[botonera] button[btnGuardar]{
-    background-color: #3F51B5;  
+    background-color: #3F51B5;
     top:0px;
     left:0px;
     position: absolute;
@@ -146,11 +170,12 @@ div[botonera] button[btnGuardar]:hover:before{
     color:white;
     background-color: inherit;
     margin-left:-25px;
-    border-radius:5px; 
+    border-radius:5px;
     padding:5px;
 }
+/*---------------------------------------------------------------------------*/
 div[botonera] button[btnCancelar]{
-    background-color: #f44336;  
+    background-color: #f44336;
     top:0px;
     left:0px;
     position: absolute;
@@ -163,9 +188,10 @@ div[botonera] button[btnCancelar]:hover:before{
     color:white;
     background-color: #f44336;
     margin-left:-25px;
-    border-radius:5px; 
+    border-radius:5px;
     padding:5px;
 }
+/*---------------------------------------------------------------------------*/
 div[botonera] button[btnAbrir]{
     border: none;
     width: 60px;
