--- a/Client/lib/Rhino/css/iconos.css
+++ b/Client/lib/Rhino/css/iconos.css
@@ -10,8 +10,15 @@ button{
     align-items: center;
     justify-content: center;
 }
+i{
+    position: absolute;
+}
 /*se puede borrar despues*/
 .icon:after {
+    font-family: inherit;
+    font-style: initial;
+}
+.icon {
     font-family: 'Material Icons';
     font-style: initial;
 }
@@ -43,6 +50,11 @@ button{
 .icon-nuevo-azul-claro-32:after {
     content: 'insert_drive_file';
     color:  #66d0ff;
+    font-size: 24px;
+}
+.icon-nuevo-blanco-32:after {
+    content: 'insert_drive_file';
+    color:  white;
     font-size: 24px;
 }
 .icon-operaciones-blanco-32:after{
@@ -96,6 +108,11 @@ button{
 .icon-green-add:after {
     content: 'add';
     color: white ;
+    font-size: 24px;
+}
+.icon-white-add:after {
+    content: 'add';
+    color: #4caf50 ;
     font-size: 24px;
 }
 /*                Material Icons Google                  */
