--- a/Client/lib/Rhino/css/ventanaModal.css
+++ b/Client/lib/Rhino/css/ventanaModal.css
@@ -31,7 +31,7 @@ div[capa='contenido'].ancho{
 div[capa='contenido'] section[cabecera] {
     width: 100%;
     height: 20px;
-    background-color: #4CAF50;
+    background-color: #2196F3 ;
     color: white;
     padding: 20px;
     font-size: 25px;
@@ -124,7 +124,7 @@ div[capa='contenido'] section[cuerpo] div[textoModal]{
 div[capa='contenido'] section[pie] {
     width: 100%;
     height: 50px;
-    background-color: #A5D6A7;
+    background-color: #BBDEFB;
     position: absolute;
     bottom: 0px;
     transition: all 0.3s linear;
