--- a/Client/vistas/css/cuerpo.css
+++ b/Client/vistas/css/cuerpo.css
@@ -1,690 +1,4 @@
-/*-----------------------------------------------FUENTES-----------------------------------------------------*/
-@font-face {
-   font-family: "AGT";
-   font-style: normal;
-   font-weight: normal;
-   src: url("../imagenes/fuentes/AGT.ttf");
-}
-@font-face {
-   font-family: "MWH";
-   font-style: normal;
-   font-weight: normal;
-   src: url('../imagenes/fuentes/MWH.ttf') format("truetype");
-}
-/*-----------------------------------------------Acceso-----------------------------------------------------*/
-div[contenedor-acc]{
-	float: left;
-	top: 50%;
-	border: 1px solid #C0C0C0;
-	border-radius: 3px;
-	width: 315px;
-	background: #FFF none repeat scroll 0% 0%;
-	left: 50%;
-	position: absolute;
-	margin-left: -160px;
-	margin-top: -200px;
-}
-div[contenedor-acc] i.icono-usuario,div[contenedor-acc] i.icono-llave{
-	background: #354b60;
-	float: left;
-}
-div[contenedor-acc] i.icono-usuario{width: 40px;
-	height: 40px;
-	background-image: url("../imagenes/iconos/blancos/cool.png");
-	margin-top: 30px !important;
-	background-repeat: no-repeat;
-	background-position: 5px 4px;
-	margin-left: 10px;
-}
-div[contenedor-acc] i.icono-llave{
-
-	width: 40px;
-	height: 40px;
-	background-image: url("../imagenes/iconos/blancos/key.png");
-	margin-top: 10px !important;
-	background-repeat: no-repeat;
-	background-position: 5px 4px;
-	margin-left: 10px;
-
-}
-div[titulo-acc]{
-	background: #354b60;
-	color: white;
-	font-size: 30px;
-	padding: 5px 25px 5px;
-}
-div[contenedor-acc] input[type="text"],div[contenedor-acc] input[type="password"]{
-	width: 70%;
-	padding: 9px;
-	font-size: 17px;
-	float: left;
-	margin-left: -4px;
-	border: 1px solid rgb(53, 75, 96);
-	border-radius: 0px;
-}
-div[contenedor-acc] input[type="text"]{
-	margin-top: 30px;
-	margin-bottom: 10px;
-}
-div[contenedor-acc] input[type="password"]{
-	margin-bottom: 30px;
-	margin-top: 10px;
-}
-div[contenedor-acc] button{    
-	background: #354b60 none repeat scroll 0% 0%;
-    color: #FFF;
-    width: 30%;
-    border: medium none;
-    padding: 10px;
-    margin: 10px 10px 20px 40px;
-    box-shadow: 0px 0px 1px white;
-}
-div[contenedor-acc] label{
-	color: white;
-	text-align: center;
-	font-style: italic;
-	float: right;
-	margin:20px;
-}
-div[botonera-acc]{
-	background: #354b60;
-	border-top: 1px solid silver;
-	margin-top: 10px;
-}
-div#contenedor{
-	width: 100%;
-	height: 100%;
-}
-div[salto]{
-	clear: both;
-}
-/*--------------------------------------INICIO----------------------------------------------*/
-div[cabecera-ini]{
-	position: fixed;
-	width: 100%;
-	height: 32px;
-	background:#354b60;
-	z-index: 10;
-	margin-left:-8px;
-
-}
-span[icono-app]{
-	color:white;
-	font-size: 25px; 
-}
-i[menu]{
-	float: right;
-	border-left: 1px solid white
-}
-i#menuPer{
-	width: 34px;
-	height: 32px;
-	background-image: url("../imagenes/iconos/blancos/cool.png");
-	background-repeat: no-repeat;
-	background-position: 3px 0px;
-}
-i#menuNew{
-	width: 34px;
-	height: 32px;
-	background-image: url("../imagenes/iconos/blancos/pen2.png");
-	background-repeat: no-repeat;
-	background-position: 3px 0px;
-}
-quotes{
-	color:#354b60;
-	font-family: "MWH";
-}
-/*-----------------------------------------CAPAS----------------------------------------------*/
-div#exterior{
-	width: 100%;
-	height: 100%;
-	position:fixed;
-	background: black;
-	opacity: 0;
-	z-index: 3;
-	margin-left: -8px;
-	transition:all 0.5s;
-}
-div#capaContenido{
-	background: white;
-	width:50%;
-	height: auto;
-	position: absolute;
-	top: 10%;
-	left: 25%;
-	margin-bottom: 100px;
-	z-index: 10;
-	box-shadow: 1px 1px 1px black;
-	overflow: hidden;
-}
-/*---------------------------------DATOS PERSONALES-------------------------------------------*/
-div#dP{
-	width: 200px;
-	height: 143px;
-	background: white;
-	margin-top:-150px;
-	margin-left: 81%; 
-	transition:all 0.5s;
-	position:fixed;
-	z-index: 8;
-	border-radius: 0px 0px 10px 10px;
-}
-div[tituloPer]{
-	text-align: center;
-	font-size: 15px;
-}
-i.icon{
-	margin-top: 2px !important;
-}
-span[per]{
-	color:silver;
-}
-div[contentNombre],div[cs],div[tituloPer]{
-	border-bottom: 1px solid silver;
-	margin-top: 12px;
-}
-
-/*---------------------------------Nueva Frase-------------------------------------------*/
-div#nF{
-	width: 60%;
-	height: 132px;
-	background: white;
-	margin:-150px 25% ;
-	transition:all 0.5s;
-	position:absolute;
-	z-index: 10;
-}
-div[botoneraNF]{
-	width: 100%;
-	height: 33px;
-	border-top: 1px solid silver;
-	background: #354b60;
-}
-textarea#nfPanel{
-	outline: medium none;
-	border: medium none;
-	resize: none;
-	width: 96%;
-	height: 100px;
-	font-size: 20px;
-	padding-top: 15px;
-	font-family: "AGT";
-}
-l[nfEnviar]{
-	width: auto;
-	color:white;
-	border-right: 1px solid white;
-	font-size: 25px;
-}
-div[usarSeudonimo]{
-	display: inline-block;
-	color: silver;
-	float: right;
-	padding: 5px;
-}
-/*---------------------------Frases-----------------------------------------*/
-div[fondo]{
-	width: 100%;
-	position:fixed;
-	height: 100%;
-	background: url("../imagenes/fondo.jpg");
-	background-size: cover;
-	z-index:-1;
-	margin:0px -8px;
-}
-div#contenedorFrases{
-	width: 70%;
-	height: auto;
-	margin:0px auto;
-}
-div[primero]{
-	height: 32px;
-	width: 100%;
-	margin-bottom: 50px;
-	margin-top: -8px;
-	margin-left: -10px;
-	background: white;
-}
-div[frase]{
-	width: 60%;
-	height: 162px;
-	background: #FFF none repeat scroll 0% 0%;
-	margin: 25px 25%;
-	z-index: 1;
-	border: 1px solid #354b60;
-}
-div[frase] div[contenido]{
-	font-style: italic;
-	font-size: 25px;
-	padding: 20px;
-	border-bottom: 1px solid silver;
-	height: 90px;
-	font-family: "AGT";
-}
-span[autor]{
-	color:	silver;
-	float: right;
-	margin-right: 10px;
-	text-transform: capitalize;
-	font-weight: bold;
-}
-au{
-	cursor: pointer;
-}
-/*-----------------------------------------------identModule---------------------------*/
-div[ident]{
-	width: 20%;
-	height:80px;
-	background: #354b60;
-	position: fixed;
-	margin-left: -10%;
-}
-div[idNombre]{
-	width: auto;
-	height: 25%;
-	color: #FBFCFC;
-	font-size: 100%;
-	float: left;
-	margin-top: 3%;
-}
-div[idImg]{
-	border-radius: 1000px;
-	height: 80px;
-	width: 80px;
-	background-color: silver;
-	float: left;
-}
-/*-----------------------------------Opciones-----------------------------------*/
-div[titulo-opciones]{
-	width: 100%;
-	background: #354b60;
-	padding: 10px;
-	color: #FBFCFC;
-	font-size: 25px;
-}
-div[titulo-opciones] i{
-	float:right;
-	margin-right: 20px;
-}
-div[subtitulo-opciones]{
-	color: #354b60;
-	margin-left: 20px;
-	padding: 10px;
-	font-size: 20px;
-}
-div[form-opciones]{
-	margin-left: 40px;
-	border-bottom: 1px solid #354b60;
-	padding-right:20px; 
-	margin-bottom: 5px;
-}
-div[form-opciones] input[type='text'],div[form-opciones] input[type='password']{
-	padding: 10px;
-	margin: 5px;
-}
-div[form-opciones] button,div[salir] button{    
-	background: #354b60 none repeat scroll 0% 0%;
-    color: #FFF;
-    width: 30%;
-    border: medium none;
-    padding: 10px;
-    margin: 10px 64px 20px ;
-    box-shadow: 0px 0px 1px white;
-    float: right;
-}
-div[ordenar]{
-	clear: both;
-}
-div[salir] {
-	padding: 20px;
-}
-/*--------------------------------Cargando------------------------------------*/
-div[cargando] {
-    position: absolute;
-    width: 500px;
-    z-index: 20;
-    height: 60px;
-    background: white ;
-    top:40%;
-    left:30%;
-    box-shadow: 0 0 1px black;
-}
-div[cargando] div[gif]{
-	float: left;
-	background: transparent url("../imagenes/29.gif") no-repeat scroll 0% 0%;
-	width: 50px;
-	height: 50px;
-	margin: 5px 25px;
-}
-div[cargando] div[texto]{
-	float: left;
-	padding-top: 20px;
-	font-style: italic;
-	padding-right: 20px;
-}
-/*--------------------------------Chat------------------------------------*/
-
-div#chatCon{
-	transition:all 0.5s;
-	width: 31%;
-	text-align: center;	
-	height: 80%;
-	top: 26%;
-	position: fixed;
-	z-index: 10;
-	left:-31%;
-}
-div[dashBoard]{
-	float: right;
-	width: 100%;
-	height: auto;
-	transition: all 0.5s;
-	height: 100%;
-}
-div[dashOpcs]{
-	width: 100%;
-	overflow: auto;
-	height: 100%;
-
-}
-div[dashBoard] dashOpc, div[dashBoard] div[dashCab]{
-	width: 100%;
-	height: 40px;
-
-	color: #354B60;
-	border: 1px none #354B60;
-	background: white none repeat scroll 0% 0%;
-}
-div[dashBoard] div[dashCab]{
-	transition: all 0.5s ease-out 0s;
-	margin: 0px -60px 0px 0px;
-	float: right;
-	width: 60px;
-	margin-bottom: 5px;
-}
-div[dashBoard] div[dashCab] div[dashtitle]{
-	transition: all 0.5s ;
-	margin-top: 12px;
-	width: 0px;
-	overflow: hidden;
-	float: left;
-	margin-left: 50px;
-}
-.iconMjs{
-	float:left;
-	width: 40px;
-	height: 40px;
-	background-image: url("../imagenes/iconos/azules/wallet.png");
-	background-repeat: no-repeat;
-	background-position: 5px 4px;
-	margin-left: 10px;
-	transition:all 0.5s;
-}
-/*--------------------------------ChatIndividual--------------------------*/
-div[dashBoard] dashOpc{
-    float: left;
-    width: 100%;
-    box-shadow: 0px 0px 1px #451970;
-    height: 70px;
-}
-
-div[dashBoard] dashOpc div[contOpc]{
-	background: transparent;
-}
-/*---------------------------------------Cards Style-------------------------------*/
-div[cardId]{
-	width: 30%;
-    background: white;
-    height: 80px;
-  	perspective: 800px;
-    float: left;
-    position: fixed;
-    left: 25px;
-}
-div[cardFlipCont]{
-	box-shadow: 0px 0px 1px 0px black;
-	width: 100%;
-  	height: 100%;
-  	position: absolute;
-  	transform-style: preserve-3d;
-  	transition: transform 0.5s;
-}
-/*div[cardFlipCont]:hover {
-  transform: rotateX( 180deg );
-}*/
-div[cardFlipCont] .front {
-  transform: rotateX( 0deg );
-}
-div[cardFlipCont] .back {
-  transform: rotateX( 180deg );
-}
-div[cardFlipCont] figure {
-  margin: 0;
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-div[cardLogo]{
-	border-radius: 100px;
-    background-color: #27ae60;
-    color: #ecf0f1;
-    width: 70px;
-    height: 70px;
-    float:left;
-    margin-left:10px;
-    margin-top: 5px; 
-}
-div[cardTitle]{
-	color: #27ae60;
-	float: left;
-	font-size: 25px;
-    padding: 16px;
-
-}
-div[cardButton] input[type='button']{
-	border-radius: 2px;
-    border: 1px solid #ecf0f1;
-    color: white;
-    float: right;
-    background-color: #27AE60;
-    padding: 5px 20px;
-}
-div[iniciales]{
-	font-size: 200%;
-    width: 44px;
-    margin: 0px auto;
-    padding: 16px 19px 16px 13px;
-}
-/*----------------------------------Chat Card-----------------------------------------------*/
-card[cardChat] {
-	transition:all 0.3s ease-in-out;
-	width: 98%;
-    height: auto;
-    background: white;
-    box-shadow: 0px 0px 1px 0px black;
-    height: 50px;
-    float: left;
-    margin: 0px 0px 1px 3px;
-    overflow: hidden;
-}
-
-card[cardChat] div[chatCab]{
-	overflow: hidden; 
-	height: 50px;
-}
-card[cardChat] div[chatCab] div[cardLogo]{
-	border-radius: 100px;
-    background-color: #27ae60;
-    color: #ecf0f1;
-    width: 38px;
-    height: 38px;
-    float: left;
-    margin-left: 10px;
-    margin-top: 6px;
-}
-card[cardChat] div[chatCab] div[cardTitle]{
-	color: #27ae60;
-	float: left;
-	padding: 6px 10px;
-	font-size: 15px;
-
-}
-
-card[cardChat] div[chatCab] div[iniciales]{
-	font-size: 100%;
-    width: auto;
-    padding: 10px 0px 0px 0px;
-}
-card[cardChat] div[chatCab] div[notificaciones]{
-	transition:all 0.5s ease-in-out;
-	border-radius: 100px;
-    border: 1px solid #c0392b;
-    color: white;
-    float: right;
-    background-color: #e74c3c;
-    z-index: 10;
-    width: 15px;
-    height: 15px;
-    margin: 2px -18px 0px 0px;
-    font-size: 13px;
-}
-card[cardChat] div[chatCab] div[opciones]{
-	transition:all 0.5s ease-in-out;
-	border:1px solid white;
-	border-radius: 100px;
-    color: black;
-    float: right;
-    background-color: white;
-    z-index: 5;
-    margin-right: 3px;
-    margin-top: 2px;
-    width: 15px;
-    height: 15px;
-    font-size: 13px;
-}
-card[cardChat] div[chatCab] div[opciones]:hover{
-	border: 1px solid silver;
-	color: silver;
-}
-card[cardChat] div[chatCab] div[opciones] div[contenido],card[cardChat] div[chatCab] div[notificaciones] div[contenido]{
-	padding: 0px 0px 0px 0px;
-	text-align: center;
-	cursor: pointer;
-}
-card[cardChat] div[chatBody] div[gif]{
-	float: left;
-	background: transparent url("../imagenes/29.gif") no-repeat scroll 0% 0%;
-	width: 50px;
-	height: 50px;
-	margin: 5px 25px;
-}
-card[cardChat] div[chatBody] div[texto]{
-	float: left;
-	padding-top: 20px;
-	font-style: italic;
-	padding-right: 20px;
-}
-card[cardChat] div[chatFoot]{
-	float: left;
-	height: 40px;
-	width: 100%;
-	border-top:1px solid silver;
-}
-card[cardChat] div[chatFoot] textarea[chatField]{
-	float: left;
-	width: 80%;
-	height: 90%;
-	outline: medium none;
-	resize: none;
-	padding-left: 5px;
-	padding-top: 5px;
-	border: medium none !important;
-}
-card[cardChat] div[chatFoot] input[type='button']{
-	float: right;
-	border-radius: 100px;
-	border: 0px none;
-	width: 35px;
-	height: 35px;
-	margin: 3px 5px 0px 0px;
-	background-color: #00796B;
-}
-/*---------------------------------------ChatBody--------------------------------------------------------------------*/
-card[cardChat] div[chatBody]{
-	overflow-x: hidden;
-	overflow-y: auto;
-	transition:all 0.3s ease-in-out;
-	height: 0px;
-	background-color:#BCAAA4; 
-}
-/*---------------------------------------MsgBubble----------------------------------------------------------------*/
-
-div[msgBubble]{
-	width:70%;
-	background: white;
-	margin-bottom: 5px;
-	margin-top: 5px;
-	padding: 5px;
-	font-size: 12px;
-}
-
-div[orientacion='izquierda']{
-	float: left;
-	margin-left: 20px;
-	text-align: left;
-	border-radius: 0px 4px 4px 4px;
-	position: relative;
-	padding: 10px;
-	background: #FFFFFF;
-	-webkit-border-radius: 0px 4px 4px 4px;
-	-moz-border-radius: 0px 4px 4px 4px;
-	border-radius: 0px 4px 4px 4px;
-}
-
-div[orientacion='derecha']{
-
-	float: right;
-	margin-right: 20px;
-	text-align: right;
-	position: relative;
-	padding: 10px;
-	background: #FFFFFF;
-	-webkit-border-radius: 4px 0px 4px 4px;
-	-moz-border-radius: 4px 0px 4px 4px;
-	border-radius: 4px 0px 4px 4px;
-}
-
-div[orientacion='derecha']:after
-{
-	content: '';
-	position: absolute;
-	border-style: solid;
-	border-width: 12px 12px 12px 12px;
-	border-color: #ffffff transparent transparent #FFFFFF;
-	display: block;
-	width: 0;
-	z-index: 1;
-	margin-top: -15px;
-	right: -15px;
-	top: 15px;
-}
-div[orientacion='izquierda']:after
-{
-	content: '';
-	position: absolute;
-	border-style: solid;
-	border-width: 12px 12px 12px 12px;
-	border-color: #FFFFFF #FFFFFF transparent transparent;
-	display: block;
-	width: 0;
-	z-index: 1;
-	left: -15px;
-	top: 0px;
-
-}
-/*---------------------------------------Clear--------------------------------------------------------------------*/
-div[clear]{
-	clear: both;
-}
+@import url('carga.css');
+@import url('chatGeneral.css');
+@import url('chat.css');
+@import url('MsgBubble.css');
