--- a/Client/lib/Rhino/css/Rhino.css
+++ b/Client/lib/Rhino/css/Rhino.css
@@ -608,8 +608,8 @@ div[mat-window].formulario {
 div[mat-window].centrado {
     width: 400px;
     float: left;
-    margin-top: calc(20%);
-    margin-left: calc(25%);
+    margin-top: calc(25% - 151px);
+    margin-left: calc(50% - 200px);
 }
 div[mat-window].titulo {
     width: calc(80% + 50px);
