--- a/Client/lib/Rhino/css/Rhino.css
+++ b/Client/lib/Rhino/css/Rhino.css
@@ -35,7 +35,7 @@ div.ink {
     transform: scale(0);
     border-radius: 100%;
     opacity: 0.3;
-    background-color: #4CAF50;
+    background-color: #2196F3 ;
 }
 div.ink.animate {
     transition: all 0.65s linear;
@@ -100,7 +100,7 @@ article[update] {
     width: 24px;
     height: 24px;
     padding: 1px;
-    background-color: #4CAF50;
+    background-color: #2196F3 ;
     background-repeat: no-repeat;
     background-position: 5px;
     float: right;
@@ -114,18 +114,18 @@ article[update]:after{
     font-style: initial;
 }
 article[update]:hover {
-    color:#4CAF50;
+    color:#2196F3 ;
     background-color: white;
 }
 article[update].edicion {
-    background-color: #4CAF50;
+    background-color: #2196F3 ;
 }
 article[update].edicion:after{
     content: 'save';
 }
 article[update].edicion:hover {
     background-color: white;
-    color:#4CAF50
+    color:#2196F3
 }
 section[sector]:last-child {
     bottom: 1px;
@@ -149,7 +149,7 @@ section[contenedor] article {
 article:first-child {
     margin-left: 10px;
 }
-section[contenedor] article[add]{background-color: #4CAF50;
+section[contenedor] article[add]{background-color: #2196F3 ;
     max-height: 32px;
     padding: 0px;
 }
@@ -230,12 +230,12 @@ div.group label {
 div.group input:focus~ label, div.group input:valid~ label {
     top: -20px;
     font-size: 12px;
-    color: #4CAF50;
+    color: #2196F3 ;
 }
 div.group textarea:focus~ label, div.group textarea:valid~ label {
     top: -20px;
     font-size: 12px;
-    color: #4CAF50;
+    color: #2196F3 ;
 }
 div.group.deshabilitado > label{
     top: -20px;
@@ -257,7 +257,7 @@ div.group.deshabilitado > label{
     width: 0px;
     bottom: 1px;
     position: absolute;
-    background: #4CAF50;
+    background: #2196F3 ;
     transition: 0.2s ease all;
     -moz-transition: 0.2s ease all;
     -webkit-transition: 0.2s ease all;
@@ -354,7 +354,7 @@ div.desahbilitado label.radio span.outer{
     opacity: 1;
 }
 .radio input:checked+ .outer {
-    border: 2px solid #4CAF50;
+    border: 2px solid #2196F3 ;
 }
 .radio input:focus+ .outer .inner {
     -webkit-transform: scale(1);
@@ -369,7 +369,7 @@ div.desahbilitado label.radio span.outer{
     display: block;
     float: left;
     margin: 12px -4px 0px 0px;
-    border: 2px solid #4CAF50;
+    border: 2px solid #2196F3 ;
     border-radius: 50%;
     background-color: #fff;
 }
@@ -445,7 +445,7 @@ div[tooltip] {
     width: 100%;
     height: 40px;
     font-size: 10px;
-    background-color: #4CAF50;
+    background-color: #2196F3 ;
     border-radius: 3px;
     overflow: visible;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 2px 1px;
@@ -461,7 +461,7 @@ div[tooltip]:before {
     left: 50px;
     border-width: 10px;
     border-style: solid;
-    border-color: #4CAF50 transparent transparent #4CAF50;
+    border-color: #2196F3  transparent transparent #2196F3 ;
 }
 
 /*--------------------------ELEMENTOS DE EDICION-------------------------------*/
@@ -470,7 +470,7 @@ section[titulo][area] {
     transition: all 0.5s ease-in-out;
     padding: 10px 0px 0px 50px;
     font-size: 23px;
-    background-color: #4CAF50;
+    background-color: #2196F3 ;
     color: white;
 }
 section[titulo][area]> article[update] {
@@ -605,6 +605,12 @@ div[mat-window].formulario {
     width: calc(90%);
     float: left;
 }
+div[mat-window].centrado {
+    width: 400px;
+    float: left;
+    margin-top: calc(25% - 151px);
+    margin-left: calc(50% - 200px);
+}
 div[mat-window].titulo {
     width: calc(80% + 50px);
     float: left;
@@ -627,10 +633,10 @@ div[mat-window] section[titulo] {
 }
 div[mat-window] section[titulo].basico {
     color: white;
-    background-color: #4CAF50;
+    background-color: #2196F3 ;
 }
 div[mat-window] section[titulo].inverso {
-    color: #4CAF50;
+    color: #2196F3 ;
     background-color: white;
     border-bottom: 1px solid rgba(160, 160, 160, 0.5);
 }
